--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-env": "^1.5.2",
+    "colors": "^1.1.2",
     "webpack": "^3.0.0",
     "webpack-node-externals": "^1.6.0",
     "webpack-shell-plugin": "^0.5.0"
